Fixed stretched images

--- a/client/src/components/team-card/team-card.less
+++ b/client/src/components/team-card/team-card.less
@@ -33,13 +33,20 @@
         margin-top: 0.3em;
     }
 
-    .team-card__image {
+    .team-card__image-container {
         float: left;
+        text-align: center;
 
         width: 100px;
         height: 100px;
         margin-right: 1em;
         margin-bottom: 1em;
+    }
+
+    .team-card__image {
+        max-height: 100%;
+        max-width: 100%;
+        margin: auto;
     }
 }
 
